# gpu-radar-raw-signal-synthesis

./: .gitignore  README.md
data/: README.md
docs/: README.md
scripts/: convert_all_data.py
src/: CMakeLists.txt  cluster.cu  radar.cu
